@@ -1,5 +1,5 @@
 nm = tmpnam ();
-if ((id = fopen (nm, "w")) > 0)
+if ((id = fopen (nm, "wb")) > 0)
   [s, err] = stat (nm);
   if (! err && fclose (id) == 0 && unlink (nm) == 0)
     [s, err] = stat (nm);
